--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,9 @@ body{
   background: var(--page);
   color: var(--ink);
   line-height: 1.6;
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  font-family: 'DRUK', sans-serif;
+  /* font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; */
+  font-size: 16px;
   background-image:
     radial-gradient(circle at 25% 25%, rgba(0,0,0,.03) 0 40%, transparent 41%),
     radial-gradient(circle at 75% 75%, rgba(0,0,0,.03) 0 40%, transparent 41%);
