--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body{
   background: var(--page);
   color: var(--ink);
   line-height: 1.6;
-  font-family: 'DRUK', sans-serif;
+  font-family: DRUK, sans-serif;
   /* font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; */
   font-size: 16px;
   background-image:
