--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,10 @@ body{
   /* font-family: DRUK, sans-serif; */
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; 
   font-size: 16px;
-  background-image:
+  background: url('Pictures/Guv\ Background1.png') no-repeat center center/cover;
+  /* background-image:
     radial-gradient(circle at 25% 25%, rgba(0,0,0,.03) 0 40%, transparent 41%),
-    radial-gradient(circle at 75% 75%, rgba(0,0,0,.03) 0 40%, transparent 41%);
+    radial-gradient(circle at 75% 75%, rgba(0,0,0,.03) 0 40%, transparent 41%); */
   background-size: 40px 40px;
 }
 
